[project]
name = "bio-mcp-seqkit"
version = "0.1.0"
description = "MCP server for SeqKit sequence file manipulation"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Bio-MCP Project"}]
license = {text = "MIT"}

dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"